modified all urls

--- a/voyage/authentication/templates/authentication/admin_flights.html
+++ b/voyage/authentication/templates/authentication/admin_flights.html
@@ -241,11 +241,11 @@ transform:scale(1.01);
     </div>
     <div id="navbar">
     <ul>
-      <li><a href="https://voyage605app.herokuapp.com/admin/home"><i class="fa fa-home" aria-hidden="true" style="padding-right:10px;"></i>Home</a></li>
-      <li><a href="https://voyage605app.herokuapp.com/admin/flights" class="active"><i class="fa fa-plane" aria-hidden="true" style="padding-right:10px;"></i>Flights</a></li>
-      <li><a href="https://voyage605app.herokuapp.com/admin/buses" ><i class="fa fa-bus" aria-hidden="true" style="padding-right:10px;"></i>Buses</a></li>
-      <li><a href="https://voyage605app.herokuapp.com/admin/routes" ><i class="fa fa-map-marker" aria-hidden="true" style="padding-right:10px;"></i>Routes</a></li>
-       <li><a href="https://voyage605app.herokuapp.com/admin/add"><i class="fa fa-user-plus" aria-hidden="true" style="padding-right:10px;"class="icon"></i>Add admin</a></li>
+      <li><a href="/admin/home"><i class="fa fa-home" aria-hidden="true" style="padding-right:10px;"></i>Home</a></li>
+      <li><a href="/admin/flights" class="active"><i class="fa fa-plane" aria-hidden="true" style="padding-right:10px;"></i>Flights</a></li>
+      <li><a href="/admin/buses" ><i class="fa fa-bus" aria-hidden="true" style="padding-right:10px;"></i>Buses</a></li>
+      <li><a href="/admin/routes" ><i class="fa fa-map-marker" aria-hidden="true" style="padding-right:10px;"></i>Routes</a></li>
+       <li><a href="/admin/add"><i class="fa fa-user-plus" aria-hidden="true" style="padding-right:10px;"class="icon"></i>Add admin</a></li>
       </ul>
       </div>
   </nav>
@@ -263,7 +263,7 @@ transform:scale(1.01);
     </td>
     <td style="padding:5px 30px;width:20vw;">
     <div class="loginbtn">
-                 <input class="btn" type="submit" name="" value="Flights" onclick="window.location.href='https://voyage605app.herokuapp.com/admin/flights/list'">
+                 <input class="btn" type="submit" name="" value="Flights" onclick="window.location.href='/admin/flights/list'">
             </div>
     </td>
     </tr>
@@ -277,7 +277,7 @@ transform:scale(1.01);
         </td>
         <td style="padding:5px 30px;width:20vw;">
         <div class="loginbtn">
-                     <input class="btn" type="submit" name="" value="flight details" onclick="window.location.href='https://voyage605app.herokuapp.com/admin/flights/details'">
+                     <input class="btn" type="submit" name="" value="flight details" onclick="window.location.href='/admin/flights/details'">
                 </div>
         </td>
         </tr>
@@ -291,7 +291,7 @@ transform:scale(1.01);
         </td>
         <td style="padding:5px 30px;width:20vw;">
         <div class="loginbtn">
-                     <input class="btn" type="submit" name="" value="flight schedule" onclick="window.location.href='https://voyage605app.herokuapp.com/admin/flights/schedule'">
+                     <input class="btn" type="submit" name="" value="flight schedule" onclick="window.location.href='/admin/flights/schedule'">
                 </div>
         </td>
         </tr>
