--- a/voyage/authentication/templates/authentication/admin.html
+++ b/voyage/authentication/templates/authentication/admin.html
@@ -242,9 +242,9 @@ transform:scale(1.01);
     <div id="navbar">
     <ul>
       <!-- <li><a href="" class="active"><i class="fa fa-home" aria-hidden="true" style="padding-right:10px;"></i>Home</a></li> -->
-      <!-- <li><a href="https://voyage605app.herokuapp.com/login/{{userId}}/{{email}}/flights"><i class="fa fa-plane" aria-hidden="true" style="padding-right:10px;"></i>Flights</a></li> -->
+      <!-- <li><a href="/login/{{userId}}/{{email}}/flights"><i class="fa fa-plane" aria-hidden="true" style="padding-right:10px;"></i>Flights</a></li> -->
       <!-- {% comment %} <li><a href="#"><i class="fa fa-train" aria-hidden="true" style="padding-right:10px;" class="icon"></i>Trains</a></li> {% endcomment %} -->
-      <!-- <li><a href="https://voyage605app.herokuapp.com/login/{{userId}}/{{email}}/buses"><i class="fa fa-bus" aria-hidden="true" style="padding-right:10px;"class="icon"></i>Buses</a></li> -->
+      <!-- <li><a href="/login/{{userId}}/{{email}}/buses"><i class="fa fa-bus" aria-hidden="true" style="padding-right:10px;"class="icon"></i>Buses</a></li> -->
       <!-- {% comment %} <li><a href="#"><i class="fa fa-suitcase" aria-hidden="true" style="padding-right:10px;"class="icon"></i>Trips</a></li> {% endcomment %} -->
 
       </ul>
@@ -259,9 +259,9 @@ transform:scale(1.01);
     <div class="list">
       <div class="item"><i class="fa fa-user-circle fa-4x" style="color:red;" ></i>{{firstname}} {{lastname}}</div>
       <!-- <div class="item"><i class="fa fa-credit-card-alt" style="color:red;padding-right:10px;"></i><i class="fa fa-inr" style="color:white;padding-right:5px;"></i>{{wallet}}</div> -->
-      <!-- <div class="item"><a   href="https://voyage605app.herokuapp.com/login/{{userId}}/{{email}}/profile" style="text-decoration:none;color:white;" ><i class="fa fa-user" style="padding-right:10px;color:red"></i>profile</a></div> -->
-      <div class="item"><a  href="https://voyage605app.herokuapp.com/admin/changepassword" style="text-decoration:none;color:white;"><i class="fa fa-key" style="padding-right:10px;color:red"></i>change password</a></div>
-      <!-- <div class="item"><a href="https://voyage605app.herokuapp.com/login/{{userId}}/{{email}}/mybookings" style="text-decoration:none;color:white;"><i class="fa fa-suitcase" style="padding-right:10px;color:red"></i>My bookings</a></div> -->
+      <!-- <div class="item"><a   href="/login/{{userId}}/{{email}}/profile" style="text-decoration:none;color:white;" ><i class="fa fa-user" style="padding-right:10px;color:red"></i>profile</a></div> -->
+      <div class="item"><a  href="/admin/changepassword" style="text-decoration:none;color:white;"><i class="fa fa-key" style="padding-right:10px;color:red"></i>change password</a></div>
+      <!-- <div class="item"><a href="/login/{{userId}}/{{email}}/mybookings" style="text-decoration:none;color:white;"><i class="fa fa-suitcase" style="padding-right:10px;color:red"></i>My bookings</a></div> -->
       <div class="item" ><a  href="{% url 'auth-login' %}" style="text-decoration:none;color:white;" onclick="return confirm('Do you really want to logout?');"><i class="fa fa-sign-out" style="padding-right:10px;color:red"></i>log out</a></div>
     </div>
   </div>
@@ -280,7 +280,7 @@ transform:scale(1.01);
     </td>
     <td style="padding:5px 30px;width:20vw;">
     <div class="loginbtn">
-                 <input class="btn" type="submit" name="" value="Flights" onclick="window.location.href='https://voyage605app.herokuapp.com/admin/flights'">
+                 <input class="btn" type="submit" name="" value="Flights" onclick="window.location.href='/admin/flights'">
             </div>
     </td>
     </tr>
@@ -294,7 +294,7 @@ transform:scale(1.01);
         </td>
         <td style="padding:5px 30px;width:20vw;">
         <div class="loginbtn">
-                     <input class="btn" type="submit" name="" value="Buses" onclick="window.location.href='https://voyage605app.herokuapp.com/admin/buses'">
+                     <input class="btn" type="submit" name="" value="Buses" onclick="window.location.href='/admin/buses'">
                 </div>
         </td>
         </tr>
@@ -308,7 +308,7 @@ transform:scale(1.01);
         </td>
         <td style="padding:5px 30px;width:20vw;">
         <div class="loginbtn">
-                     <input class="btn" type="submit" name="" value="Routes" onclick="window.location.href='https://voyage605app.herokuapp.com/admin/routes'">
+                     <input class="btn" type="submit" name="" value="Routes" onclick="window.location.href='/admin/routes'">
                 </div>
         </td>
         </tr>
@@ -322,7 +322,7 @@ transform:scale(1.01);
         </td>
         <td style="padding:5px 30px;width:20vw;">
         <div class="loginbtn">
-                     <input class="btn" type="submit" name="" value="Add Admin" onclick="window.location.href='https://voyage605app.herokuapp.com/admin/add'">
+                     <input class="btn" type="submit" name="" value="Add Admin" onclick="window.location.href='/admin/add'">
                 </div>
         </td>
         </tr>
