--- a/voyage/authentication/templates/authentication/error.html
+++ b/voyage/authentication/templates/authentication/error.html
@@ -25,7 +25,7 @@
 <body>
 <h2 style="text-align:center;">Your session has expired!! PLease login again to continue using our site</h2>
 <div class="loginbtn">
-     <input class="btn" type="submit" name="" value="Go to login page" onclick="window.location.href='https://voyage605app.herokuapp.com/login'">
+     <input class="btn" type="submit" name="" value="Go to login page" onclick="window.location.href='/login'">
 </div>
 </body>
 </html>
