--- a/voyage/authentication/templates/authentication/login.html
+++ b/voyage/authentication/templates/authentication/login.html
@@ -9,10 +9,13 @@
 body{
     margin: 0;
     padding: 0;
+    width:100vw;
+    height:100vh;
     font-family:sans-serif;
     background:url(https://media.cntraveler.com/photos/5e9471d05cd3cb0009ca9612/master/pass/FranceSummerTravel-2020-GettyImages-805553090.jpg);
     opacity:rgba(0,0,0,0.6);
     background-size: cover;
+    background-position:center;
 }
 .login-box{
     width: 300px;
