--- a/voyage/authentication/templates/authentication/contact_us.html
+++ b/voyage/authentication/templates/authentication/contact_us.html
@@ -13,6 +13,9 @@ body{
     background:url(https://media.cntraveler.com/photos/5e9471d05cd3cb0009ca9612/master/pass/FranceSummerTravel-2020-GettyImages-805553090.jpg);
     opacity:rgba(0,0,0,0.6);
     background-size: cover;
+    width:100vw;
+    height:100vh;
+    background-position:center;
 }
 .login-box{
     width: 300px;
