--- a/voyage/authentication/templates/authentication/signup.html
+++ b/voyage/authentication/templates/authentication/signup.html
@@ -12,6 +12,9 @@ body{
     font-family:sans-serif;
     background:url(https://media.cntraveler.com/photos/5e9471d05cd3cb0009ca9612/master/pass/FranceSummerTravel-2020-GettyImages-805553090.jpg);
     background-size: cover;
+    width:100vw;
+    height:100vh;
+    background-position:center;
 }
 
 .Signup-box{
