--- a/voyage/authentication/templates/authentication/admin_buses.html
+++ b/voyage/authentication/templates/authentication/admin_buses.html
@@ -24,6 +24,10 @@ body{
     background:url(https://images.unsplash.com/photo-1452421822248-d4c2b47f0c81?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=967&q=80);
     background-size:cover;
     height:100%;
+    width:100vw;
+    height:100vh;
+    background-position:center
+
 }
 nav{
 width:100%;
