--- a/voyage/authentication/templates/authentication/flights.html
+++ b/voyage/authentication/templates/authentication/flights.html
@@ -24,6 +24,9 @@ body{
     background:url(https://images.unsplash.com/photo-1569629743817-70d8db6c323b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1974&q=80);
     background-size:cover;
     height:100%;
+    width:100vw;
+    height:100vh;
+    background-position:center
 }
 nav{
 width:100%;
