--- a/voyage/authentication/templates/authentication/buses.html
+++ b/voyage/authentication/templates/authentication/buses.html
@@ -24,6 +24,9 @@ body{
     background:url(https://images.unsplash.com/photo-1494783367193-149034c05e8f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1950&q=80);
     background-size:cover;
     height:100%;
+    width:100vw;
+    height:100vh;
+    background-position:center
 }
 nav{
 width:100%;
